@@ -1,3 +1,7 @@
+* Wed Apr 26 2017 Trevor Vaughan <tvaughan@onyxpoint.com> - 0.0.3
+- Ensure that entries in 'at.allow' are not commented out by default
+- Updated the Gemfile to pin to the latest working Beaker
+
 * Thu Mar 02 2017 Nick Miller <nick.miller@onxypoint.com> - 0.0.2
 - Manage at package
 
